Implemented import formats for assimp plugin and initial hookup to model conversion form

--- a/ModelConvert/ModelConvert.Gui/ModelConvert.Gui.csproj
+++ b/ModelConvert/ModelConvert.Gui/ModelConvert.Gui.csproj
@@ -1,9 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ModelConvert.Abstractions\ModelConvert.Abstractions.csproj" />
+    <ProjectReference Include="..\ModelConvert.Assimp\ModelConvert.Assimp.csproj" />
+    <ProjectReference Include="..\ModelConvert.DependencyResolution\ModelConvert.DependencyResolution.csproj" />
+    <ProjectReference Include="..\ModelConvert.IO\ModelConvert.IO.csproj" />
+  </ItemGroup>
 
 </Project>
